--- a/styles.css
+++ b/styles.css
@@ -11,29 +11,137 @@
     height: 40px;
 }
 
-
-.cart-body {
-    position: absolute;
-    width: 50vh;
-    height:auto;
-    right:10%;
-    background-color: #fff;
-    border-radius:10px;
-    box-shadow:0 20px 20px 0 #ccc;
-    top: 110px;
-    z-index:1;
-    display: none;
-    padding: 20px;
+.close-cart:hover {
+    color:red;
 }
 
+.cart-qty {
+    position:relative;
+    top:-15px;
+    left:-20px;
+    width: auto;
+    border-radius:50%;
+    padding-left: 10px;
+    padding-right:10px;
+    background-color: hsl(26, 100%, 55%);
+}
 
+@media(min-width:300px) and (max-width:990px) {
+    body {
+        }
 
-.heading-header h1{
+        .close-cart {
+            position: absolute;
+            top: -25%;
+            right: 0%;
+            font-size: 50px;
+            font-weight: bold;
+        }
+
+        .cart-body {
+            position: absolute;
+            width: 96%;
+            height: auto;
+            right: 2%;
+            left: 2%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 20px 20px 0 #ccc;
+            top: 110px;
+            z-index: 1;
+            display: none;
+            padding: 20px;
+        }
+    }
+
+    @media(min-width:991px) and (max-width:1300px) {
+
+        .close-cart {
+            position: absolute;
+            top: -25%;
+            right: 0%;
+            font-size: 50px;
+            font-weight: bold;
+        }
+
+        .cart-body {
+            position: absolute;
+            width: 80%;
+            height: auto;
+            right: 10%;
+            left: 10%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 20px 20px 0 #ccc;
+            top: 110px;
+            z-index: 1;
+            display: none;
+            padding: 20px;
+        }
+    }
+
+    @media(min-width:1301px) and (max-width:1600px) {
+
+        .close-cart {
+            position: absolute;
+            top: -25%;
+            right: 0%;
+            font-size: 50px;
+            font-weight: bold;
+        }
+
+        .cart-body {
+            position: absolute;
+            width: 60%;
+            height: auto;
+            right: 20%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 20px 20px 0 #ccc;
+            top: 110px;
+            z-index: 1;
+            display: none;
+            padding: 20px;
+        }
+    }
+
+    @media(min-width:1601px) and (max-width:2000px) {
+
+        .close-cart {
+            position: absolute;
+            top: -25%;
+            right: 0%;
+            font-size: 50px;
+            font-weight: bold;
+        }
+
+        .cart-body {
+            position: absolute;
+            width: 30%;
+            height: auto;
+            right: 10%;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 20px 20px 0 #ccc;
+            top: 110px;
+            z-index: 1;
+            display: none;
+            padding: 20px;
+        }
+    }
+
+    .cart-row{
+}
+
+.cart-row-content{
+}
+
+.heading-header h1 {
     display: flex;
     align-items: center;
     color: hsl(0, 0%, 0%);
     font-family: Kumbh Sans;
-    font-size:50px;
+    font-size: 50px;
 }
 
 .profile {
@@ -91,16 +199,314 @@
     justify-content:center;
     align-items:center;
 }
+@media(min-width:300px) and (max-width:990px){
 
-.slider-inner {
-    height: 50vh;
-    width: 45%;
-    overflow: hidden;
+    .slider-inner {
+        height: 50vh;
+        width: 90%;
+        overflow: hidden;
+    }
+
+    .prev {
+        left: 2%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .next {
+        right: 5%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        font-size: 40px;
+        font-weight: bold;
+        text-decoration: none;
+        top: 43%;
+        color: black;
+        background-color: #fff;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: #fff;
+        color: darkorange;
+    }
+
+    .quantity-body {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 50px;
+        font-size: 30px;
+        font-weight: bold;
+        background-color: #eeeeeeee;
+        border-radius: 10px;
+    }
+    .cart-btn {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(26, 100%, 55%);
+        width: 100%;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+    .cart-btn:hover {
+            text-decoration: none;
+            color: black;
+            background-color: hsl(25, 100%, 94%);
+            width: 100%;
+            text-align: center;
+            font-size: 20px;
+            border-radius: 10px;
+            font-weight: bold;
+            padding: 10px;
+        }
+}
+@media(min-width:991px) and (max-width:1300px){
+
+    .slider-inner {
+        height: 50vh;
+        width: 60%;
+        overflow: hidden;
+    }
+    .prev {
+        left: 18%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .next {
+        right: 20%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        font-size: 40px;
+        font-weight: bold;
+        text-decoration: none;
+        top: 43%;
+        color: black;
+        background-color: #fff;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: #fff;
+        color: darkorange;
+    }
+    .cart-btn {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(26, 100%, 55%);
+        width: 200px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+
+    .cart-btn:hover {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(25, 100%, 94%);
+        width: 200px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+    .quantity-body {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 30%;
+        height: auto;
+        font-size: 25px;
+        font-weight: bold;
+        background-color: #eeeeeeee;
+        border-radius: 10px;
+    }
 }
 
-    .slider-inner img{
-        display:none;
+@media(min-width:1301px) and (max-width:1600px){
+
+    .slider-inner {
+        height: 50vh;
+        width: 50%;
+        overflow: hidden;
     }
+
+    .prev {
+        left: 24%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .next {
+        right: 26%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        font-size: 40px;
+        font-weight: bold;
+        text-decoration: none;
+        top: 43%;
+        color: black;
+        background-color: #fff;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: #fff;
+        color: darkorange;
+    }
+    .cart-btn {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(26, 100%, 55%);
+        width: 200px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+
+    .cart-btn:hover {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(25, 100%, 94%);
+        width: 200px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+    .quantity-body {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 30%;
+        height: auto;
+        font-size: 25px;
+        font-weight: bold;
+        background-color: #eeeeeeee;
+        border-radius: 10px;
+    }
+}
+@media(min-width:1601px) and (max-width:2000px){
+
+    .slider-inner {
+        height: 50vh;
+        width: 45%;
+        overflow: hidden;
+    }
+    .prev {
+        left: 26%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .next {
+        right: 27.5%;
+        text-align: center;
+        height: 70px;
+        width: 70px;
+        border-radius: 50%;
+    }
+
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        font-size: 40px;
+        font-weight: bold;
+        text-decoration: none;
+        top: 43%;
+        color: black;
+        background-color: #fff;
+    }
+
+    .prev:hover,
+    .next:hover {
+        background-color: #fff;
+        color: darkorange;
+    }
+
+    .cart-btn {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(26, 100%, 55%);
+        width: 200px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+
+    .cart-btn:hover {
+        text-decoration: none;
+        color: black;
+        background-color: hsl(25, 100%, 94%);
+        width: 200px;
+        text-align: center;
+        font-size: 20px;
+        border-radius: 10px;
+        font-weight: bold;
+        padding: 10px;
+    }
+    .quantity-body {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        width: 30%;
+        height: auto;
+        font-size: 25px;
+        font-weight: bold;
+        background-color: #eeeeeeee;
+        border-radius: 10px;
+    }
+}
+
+.slider-inner img{
+    display:none;
+}
 
 img.active {
     display: inline-block;
@@ -108,53 +514,16 @@ img.active {
     border: 5px solid #ccc;
 }
 
-.prev {
-    left: 26%;
-    text-align: center;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%;
-}
 
-.next {
-    right: 27.5%;
-    text-align:center;
-    height: 70px;
-    width: 70px;
-    border-radius: 50%; 
-}
-
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    font-size: 40px;
-    font-weight: bold;
-    text-decoration: none;
-    top: 43%;
-    color: black;
-    background-color: #fff;
-}
-
-.prev:hover,
-.next:hover {
-    background-color:#fff;
-    color:darkorange;
-}
 
 .product-thumbnail {
     height: 100%;
     width: 25%;
     border-radius: 30px;
 }
-.product-thumbnail-2 {
-    height: 100%;
-    width: 25%;
-    border-radius: 30px;
-}
 
-.product-thumbnail-2:hover {
-    background-color:hsl(25, 100%, 94%,0.8);
+
+.product-thumbnail-2 {
     height: 100%;
     width: 25%;
     border-radius: 30px;
@@ -207,17 +576,7 @@ img.active {
     color: hsl(219, 9%, 45%);
 }
 
-.quantity-body{
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
-    width:30%;
-    height:auto ;
-    font-size:25px;
-    font-weight:bold;
-    background-color:#eeeeeeee;
-    border-radius:10px;
-}
+
 
 .minus,
 .plus {
@@ -225,7 +584,7 @@ img.active {
 }
 .add-to-cart{
     display:flex;
-    height:50px;
+    height:auto;
     margin-top:30px;
     gap:30px;
 
@@ -255,25 +614,5 @@ img.active {
     text-decoration: line-through;
 }
 
-.cart-btn {
-    text-decoration: none;
-    color: black;
-    background-color: hsl(26, 100%, 55%);
-    width:200px;
-    text-align:center;
-    font-size:20px;
-    border-radius:10px;
-    font-weight:bold;
-    padding:10px;
-}
-    .cart-btn:hover {
-        text-decoration: none;
-        color: black;
-        background-color: hsl(25, 100%, 94%);
-        width: 200px;
-        text-align: center;
-        font-size: 20px;
-        border-radius: 10px;
-        font-weight: bold;
-        padding: 10px;
-    }
+
+
